# FFUS-Backend

./: .gitignore  Makefile  pyproject.toml
ffus/: manage.py
ffus/app/: asgi.py  urls.py  wsgi.py
ffus/app/settings/: local.py  production.py  settings.py
ffus/contacts/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
ffus/contacts/tests/: constants.py  test_api.py  test_models.py
ffus/utils/: __init__.py  config.py
